service-dify-ai/dify-ai02-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-dify-ai-ipwhitelist
  namespace: dify
spec:
  ipWhiteList:
    sourceRange:
      - 128.85.200.44/32
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-dify-ai
  namespace: dify

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`difyai.difyabdevuseast2001.com`)
      kind: Rule
      middlewares:
        - name: middleware-dify-ai-ipwhitelist
          namespace: dify
      services:
        - name: dify-nginx
          port: 80
          namespace: dify
